--- a/Kitucxa-frontend/src/main/resources/templates/quanlyPhong.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlyPhong.html
@@ -15,6 +15,12 @@
 	</div>
 	<div align="center">
 		<h2>Danh sach Phong</h2>
+		<br>
+		<form method="get" th:action="@{/quan-ly-phong/tim}">
+			<input type="text" name="keyword" placeholder="Tim kiem..." />
+			<input type="submit" value="Tim kiem" class="btn btn-success" />
+		</form>
+		<br>
 		<table border="1" cellpadding="5">
 			<tr class="text-center">
 				<th>So phong</th>
