--- a/Kitucxa-frontend/src/main/resources/templates/phongForm.html
+++ b/Kitucxa-frontend/src/main/resources/templates/phongForm.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Quan ly Phong</title>
+<title>Quản lý Phòng</title>
 <link rel="stylesheet"
 	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 <body>
 	<div align="center">
-		<h1>Quan ly Phong</h1>
-		<h2><a th:href="@{/quan-ly-phong}" class="btn btn-warning">Danh sach Phong</a></h2>
+		<h1>Quản lý Phòng</h1>
+		<h2><a th:href="@{/quan-ly-phong}" class="btn btn-warning">Danh sách Phòng</a></h2>
 		<hr>
 	</div>
-	<div align="center" th:unless="${phong.soPhong}">
-		<h2>Them Phong</h2>
+	<div align="center" th:unless="${phong.id}">
+		<h2>Thêm Phòng</h2>
 		<br>
 		<form method="post" th:object="${phong}">
 			<table>
 				<tr class="text-left">
-					<td>So phong</td>
-					<td><input type="text" th:field="*{soPhong}" /></td>
+					<td>Số phòng</td>
+					<td><input type="text" th:field="*{sophong}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Loai phong</td>
-					<td><input type="text" th:field="*{loaiPhong}" /></td>
+					<td>Loại phòng</td>
+					<td><input type="text" th:field="*{loaiphong}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Don gia</td>
-					<td><input type="text" th:field="*{donGia}" /></td>
+					<td>Đơn giá</td>
+					<td><input type="text" th:field="*{dongia}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>So nguoi o toi da</td>
-					<td><input type="text" th:field="*{soNguoitoida}" /></td>
+					<td>Số người ở tối đa</td>
+					<td><input type="text" th:field="*{songuoitoida}" /></td>
 				</tr>
 			</table>
 			<br>
-			<input type="submit" value="Them" class="btn btn-success" />
+			<input type="submit" value="Thêm" class="btn btn-success" />
 		</form>
 	</div>
-	<div align="center" th:if="${phong.soPhong}">
-		<h2>Sua Phong</h2>
+	<div align="center" th:if="${phong.id}">
+		<h2>Sửa Phòng</h2>
 		<form method="POST" th:object="${phong}">
 			<table>
 				<tr class="text-left">
-					<td>So phong</td>
-					<td><input type="text" th:field="*{soPhong}" /></td>
+					<td>Số phòng</td>
+					<td><input type="text" th:field="*{sophong}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Loai phong</td>
-					<td><input type="text" th:field="*{loaiPhong}" /></td>
+					<td>Loại phòng</td>
+					<td><input type="text" th:field="*{loaiphong}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Don gia</td>
-					<td><input type="text" th:field="*{donGia}" /></td>
+					<td>Đơn giá</td>
+					<td><input type="text" th:field="*{dongia}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>So nguoi o toi da</td>
-					<td><input type="text" th:field="*{soNguoitoida}" /></td>
+					<td>Số người ở tối đa</td>
+					<td><input type="text" th:field="*{songuoitoida}" /></td>
 				</tr>
 			</table>
 			<br>
-			<input type="submit" value="Luu" class="btn btn-success" />
+			<input type="submit" value="Lưu" class="btn btn-success" />
 		</form>
 	</div>
 </body>
