--- a/Kitucxa-frontend/src/main/resources/templates/quanlyDichvu.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlyDichvu.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Quan ly Dich vu</title>
+<title>Quản lý Dịch vụ</title>
 <link rel="stylesheet"
 	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 <body>
 	<div align="center">
-		<h1>Quan ly Dich vu</h1>
+		<h1>Quản lý Dịch vụ</h1>
 		<h2>
-			<a th:href="@{/quan-ly-dich-vu/them}" class="btn btn-warning">Them
-				Dich vu</a>
+			<a th:href="@{/quan-ly-dich-vu/them}" class="btn btn-warning">Thêm Dịch vụ</a>
 		</h2>
 		<hr>
 	</div>
 	<div align="center">
-		<h2>Danh sach Dich vu</h2>
+		<h2>Danh sách Dịch vụ</h2>
 		<br>
 		<form th:action="@{/quan-ly-dich-vu/tim}" method="get" >
-			<input type="text" name="keyword" placeholder="Tim kiem..." />
-			<input type="submit" value="Tim kiem" class="btn btn-success" />
+			<input type="text" name="keyword" placeholder="Tìm kiếm..." />
+			<input type="submit" value="Tìm kiếm" class="btn btn-success" />
 		</form>
 		<br>
 		<table border="1" cellpadding="5">
 			<tr class="text-center">
-				<th>Ma dich vu</th>
-				<th>Ten</th>
-				<th>Don gia</th>
-				<th>Sua/Xoa</th>
+				<th>ID</th>
+				<th>Tên</th>
+				<th>Đơn giá</th>
+				<th>Sửa/Xóa</th>
 			</tr>
-			<tr th:each="dv : ${listDv}">
-				<td th:utext="${dv.sophong}"></td>
+			<tr th:each="dv : ${listDv}" class="text-center">
+				<td th:utext="${dv.id}"></td>
 				<td th:utext="${dv.ten}"></td>
 				<td th:utext="${dv.dongia}"></td>
-				<td><a th:href="@{'/quan-ly-dich-vu/sua/' + ${dv.sophong}}" class="btn btn-success">Sua</a>&nbsp;&nbsp;&nbsp;&nbsp; 
-				    <a th:href="@{'/quan-ly-dich-vu/xoa/' + ${dv.sophong}}" class="btn btn-danger">Xoa</a></td>
+				<td><a th:href="@{'/quan-ly-dich-vu/sua/' + ${dv.id}}" class="btn btn-success">Sửa</a>&nbsp;&nbsp;&nbsp;&nbsp; 
+				    <a th:href="@{'/quan-ly-dich-vu/xoa/' + ${dv.id}}" class="btn btn-danger">Xóa</a></td>
 			</tr>
 		</table>
 	</div>
