--- a/Kitucxa-frontend/src/main/resources/templates/sinhvienForm.html
+++ b/Kitucxa-frontend/src/main/resources/templates/sinhvienForm.html
@@ -1,81 +1,73 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Quan ly Sinh vien</title>
+<title>Quản lý Sinh viên</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 <body>
 	<div align="center">
-		<h1>Quan ly Sinh vien</h1>
+		<h1>Quản lý Sinh viên</h1>
 		<h2>
-			<a th:href="@{/quan-ly-sinh-vien}" class="btn btn-warning">Danh sach sinh vien</a>
+			<a th:href="@{/quan-ly-sinh-vien}" class="btn btn-warning">Danh sách Sinh viên</a>
 		</h2>
 		<hr>
 	</div>
-	<div align="center" th:if="${sv.maSv}">
-		<h2>Sua Sinh vien</h2>
+	<div align="center" th:if="${sv.id}">
+		<h2>Sửa Sinh viên</h2>
 		<br>
 		<form method="POST" th:object="${sv}">
 			<table>
 				<tr class="text-left">
-					<td>Ma sinh vien</td>
-					<td><input type="text" th:field="*{maSv}" /></td>
-				</tr>
-				<tr class="text-left">
-					<td>Ten</td>
+					<td>Tên</td>
 					<td><input type="text" th:field="*{ten}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Lop</td>
+					<td>Lớp</td>
 					<td><input type="text" th:field="*{lop}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>So CMT</td>
+					<td>Số CMT</td>
 					<td><input type="text" th:field="*{soCMT}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Ngay sinh</td>
-					<td><input type="text" th:field="*{ngaySinh}" /></td>
+					<td>Ngày sinh</td>
+					<td><input type="text" th:field="*{ngaysinh}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Que quan</td>
-					<td><input type="text" th:field="*{queQuan}" /></td>
+					<td>Quê quán</td>
+					<td><input type="text" th:field="*{quequan}" /></td>
 				</tr>
 			</table>
-			<br> <input type="submit" value="Luu" class="btn btn-success" />
+			<br> <input type="submit" value="Lưu" class="btn btn-success" />
 		</form>
 	</div>
-	<div align="center" th:unless="${sv.maSv}">
-		<h2>Them Sinh vien</h2>
+	<div align="center" th:unless="${sv.id}">
+		<h2>Thêm Sinh viên</h2>
 		<br>
 		<form method="POST" th:object="${sv}">
 			<table>
 				<tr class="text-left">
-					<td>Ma sinh vien</td>
-					<td><input type="text" th:field="*{maSv}" /></td>
-				</tr>
-				<tr class="text-left">
-					<td>Ten</td>
+					<td>Tên</td>
 					<td><input type="text" th:field="*{ten}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Lop</td>
+					<td>Lớp</td>
 					<td><input type="text" th:field="*{lop}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>So CMT</td>
+					<td>Số CMT</td>
 					<td><input type="text" th:field="*{soCMT}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Ngay sinh</td>
-					<td><input type="text" th:field="*{ngaySinh}" /></td>
+					<td>Ngày sinh</td>
+					<td><input type="text" th:field="*{ngaysinh}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Que quan</td>
-					<td><input type="text" th:field="*{queQuan}" /></td>
+					<td>Quê quán</td>
+					<td><input type="text" th:field="*{quequan}" /></td>
 				</tr>
 			</table>
-			<br> <input type="submit" value="Them" class="btn btn-success" />
+			<br> <input type="submit" value="Thêm" class="btn btn-success" />
 		</form>
 	</div>
 </body>
