--- a/Kitucxa-frontend/src/main/resources/templates/dichvuForm.html
+++ b/Kitucxa-frontend/src/main/resources/templates/dichvuForm.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Quản lý Dịch vụ</title>
+<title>Quan ly Dich vu</title>
 <link rel="stylesheet"
 	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 <body>
 	<div align="center">
-		<h1>Quản lý Dịch vụ</h1>
+		<h1>Quan ly Dich vu</h1>
 		<h2>
-			<a th:href="@{/quan-ly-dich-vu}" class="btn btn-warning">Danh sách Dịch vụ</a>
+			<a th:href="@{/quan-ly-dich-vu}" class="btn btn-warning">Danh sach Dich vu</a>
 		</h2>
 		<hr>
 	</div>
 	<div align="center" th:unless="${dv.id}">
-		<h2>Thêm Dịch vụ</h2>
+		<h2>Them Dich vu</h2>
 		<br>
 		<form method="post" th:object="${dv}">
 			<table>
 				<tr class="text-left">
-					<td>Tên</td>
+					<td>Ma dich vu</td>
+					<td><input type="text" th:field="*{id}" /></td>
+				</tr>
+				<tr class="text-left">
+					<td>Ten</td>
 					<td><input type="text" th:field="*{ten}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Đơn giá</td>
+					<td>Don gia</td>
 					<td><input type="text" th:field="*{dongia}" /></td>
 				</tr>
 			</table>
 			<br>
-			<input type="submit" value="Thêm" class="btn btn-success" />
+			<input type="submit" value="Them" class="btn btn-success" />
 		</form>
 	</div>
 	<div align="center" th:if="${dv.id}">
-		<h2>Sửa Dịch vụ</h2>
+		<h2>Sua Dich vu</h2>
 		<br>
 		<form method="post" th:object="${dv}">
 			<table>
 				<tr class="text-left">
-					<td>Tên</td>
+					<td>Ma dich vu</td>
+					<td><input type="text" th:field="*{id}" /></td>
+				</tr>
+				<tr class="text-left">
+					<td>Ten</td>
 					<td><input type="text" th:field="*{ten}" /></td>
 				</tr>
 				<tr class="text-left">
-					<td>Đơn giá</td>
+					<td>Don gia</td>
 					<td><input type="text" th:field="*{dongia}" /></td>
 				</tr>
 			</table>
 			<br>
-			<input type="submit" value="Lưu" class="btn btn-success" />
+			<input type="submit" value="Luu" class="btn btn-success" />
 		</form>
 	</div>
 </body>
