--- a/Kitucxa-frontend/src/main/resources/templates/quanlyPhong.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlyPhong.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Quản lý Phòng</title>
+<title>Quan ly Phong</title>
 <link rel="stylesheet"
 	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 <body>
 	<div align="center">
-		<h1>Quản lý Phòng</h1>
+		<h1>Quan ly Phong</h1>
 		<h2>
-			<a th:href="@{/quan-ly-phong/them}" class="btn btn-warning">Thêm Phòng</a>
+			<a th:href="@{/quan-ly-phong/them}" class="btn btn-warning">Them Phong</a>
 		</h2>
 		<hr>
 	</div>
 	<div align="center">
-		<h2>Danh sách Phòng</h2>
+		<h2>Danh sach Phong</h2>
 		<br>
 		<form method="get" th:action="@{/quan-ly-phong/tim}">
-			<input type="text" name="keyword" placeholder="Tìm kiếm..." />
-			<input type="submit" value="Tìm kiếm" class="btn btn-success" />
+			<input type="text" name="keyword" placeholder="Tim kiem..." />
+			<input type="submit" value="Tim kiem" class="btn btn-success" />
 		</form>
 		<br>
 		<table border="1" cellpadding="5">
 			<tr class="text-center">
-				<th>ID</th>
-				<th>Số phòng</th>
-				<th>Loại phòng</th>
-				<th>Đơn giá</th>
-				<th>Số người ở tối đa</th>
-				<th>Sửa/Xóa</th>
+				<th>So phong</th>
+				<th>Loai phong</th>
+				<th>Don gia</th>
+				<th>So nguoi o toi da</th>
+				<th>Sua/Xoa</th>
 			</tr>
-			<tr th:each="phong : ${listPhong}" class="text-center">
-				<td th:utext="${phong.id}"></td>
-				<td th:utext="${phong.sophong}"></td>
-				<td th:utext="${phong.loaiphong}"></td>
-				<td th:utext="${phong.dongia}"></td>
-				<td th:utext="${phong.songuoitoida}"></td>
-				<td><a th:href="@{'/quan-ly-phong/sua/' + ${phong.id}}" class="btn btn-success">Sửa</a>&nbsp;&nbsp;&nbsp;&nbsp;
-					<a th:href="@{'/quan-ly-phong/xoa/' + ${phong.id}}" class="btn btn-danger">Xóa</a></td>
+			<tr th:each="phong : ${listPhong}">
+				<td th:utext="${phong.soPhong}"></td>
+				<td th:utext="${phong.loaiPhong}"></td>
+				<td th:utext="${phong.donGia}"></td>
+				<td th:utext="${phong.soNguoitoida}"></td>
+				<td><a th:href="@{'/quan-ly-phong/sua/' + ${phong.soPhong}}" class="btn btn-success">Sua</a>&nbsp;&nbsp;&nbsp;&nbsp;
+					<a th:href="@{'/quan-ly-phong/xoa/' + ${phong.soPhong}}" class="btn btn-danger">Xoa</a></td>
 			</tr>
 		</table>
 	</div>
