--- a/Kitucxa-frontend/src/main/resources/templates/dichvuForm.html
+++ b/Kitucxa-frontend/src/main/resources/templates/dichvuForm.html
@@ -26,6 +26,10 @@
 					<td>Đơn giá</td>
 					<td><input type="text" th:field="*{dongia}" /></td>
 				</tr>
+				<tr class="text-left">
+					<td>Thời gian sử dụng dịch vụ</td>
+					<td><input type="text" th:field="*{thoigiansddv}" /></td>
+				</tr>
 			</table>
 			<br>
 			<input type="submit" value="Thêm" class="btn btn-success" />
@@ -43,6 +47,10 @@
 				<tr class="text-left">
 					<td>Đơn giá</td>
 					<td><input type="text" th:field="*{dongia}" /></td>
+				</tr>
+				<tr class="text-left">
+					<td>Thời gian sử dụng dịch vụ</td>
+					<td><input type="text" th:field="*{thoigiansddv}" /></td>
 				</tr>
 			</table>
 			<br>
