--- a/Kitucxa-frontend/src/main/resources/templates/quanlyDichvu.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlyDichvu.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Quản lý Dịch vụ</title>
+<meta charset="UTF-8" />
 <link rel="stylesheet"
 	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
@@ -26,12 +27,14 @@
 				<th>ID</th>
 				<th>Tên</th>
 				<th>Đơn giá</th>
+				<th>Thời gian sử dụng dịch vụ</th>
 				<th>Sửa/Xóa</th>
 			</tr>
 			<tr th:each="dv : ${listDv}" class="text-center">
 				<td th:utext="${dv.id}"></td>
 				<td th:utext="${dv.ten}"></td>
 				<td th:utext="${dv.dongia}"></td>
+				<td th:utext="${dv.thoigiansddv}"></td>
 				<td><a th:href="@{'/quan-ly-dich-vu/sua/' + ${dv.id}}" class="btn btn-success">Sửa</a>&nbsp;&nbsp;&nbsp;&nbsp; 
 				    <a th:href="@{'/quan-ly-dich-vu/xoa/' + ${dv.id}}" class="btn btn-danger">Xóa</a></td>
 			</tr>
