cap nhat hien thoi gian dung kieu dd/MM/yyyy

--- a/Kitucxa-frontend/src/main/resources/templates/ThemKhachDen.html
+++ b/Kitucxa-frontend/src/main/resources/templates/ThemKhachDen.html
@@ -31,7 +31,7 @@
 
 				<input style="margin-left: 200px;" type="submit" value="Lưu" name="luu">
 			</form>
-			<div class=”col-sm-6″><a href="#"><button style="float: none; margin-left: 200px;">Huỷ</button></a></div>
+			<div class=”col-sm-6″><a href="@{/quanlykhach/quaylai}" style="float: none; margin-left: 200px;">Huỷ</a></div>
 
 		</div>		
 	</div>
