trang chu xin xo

--- a/Kitucxa-frontend/src/main/resources/templates/quanlyPhong.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlyPhong.html
@@ -10,6 +10,7 @@
 		<h1>Quản lý Phòng</h1>
 		<h2>
 			<a th:href="@{/quan-ly-phong/them}" class="btn btn-warning">Thêm Phòng</a>
+			<a th:href="@{/}" class="btn btn-warning">Trang chủ</a>
 		</h2>
 		<hr>
 	</div>
