--- a/Kitucxa-frontend/src/main/resources/templates/login.html
+++ b/Kitucxa-frontend/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Đăng kí Dịch vụ</title>
+    <title>Login</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet"
           href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
@@ -74,7 +74,7 @@
 
 <form method="post" th:object="${thanhvien}">
     <div class="imgcontainer">
-        <img src="../images/hacker.jpg" alt="Avatar" class="avatar">
+        <img th:src="@{/images/hacker.jpg}" alt="Avatar" class="avatar">
     </div>
 
     <div class="container">
