--- a/Kitucxa-frontend/src/main/resources/templates/quanlySinhvien.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlySinhvien.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Quản lý Thanh Vien</title>
+<title>Quản lý Thành Viên</title>
 <link rel="stylesheet"
 	href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 <body>
 	<div align="center">
-		<h1>Quản lý Thanh viên</h1>
+		<h1>Quản lý Thành viên</h1>
 		<h2>
-			<a th:href="@{/quan-ly-thanh-vien/them}" class="btn btn-warning">Thêm Thanh viên</a>
+			<a th:href="@{/quan-ly-thanh-vien/them}" class="btn btn-warning">Thêm Thành viên</a>
+			<a th:href="@{/}" class="btn btn-warning">Trang chủ</a>
 		</h2>
 		<hr>
 	</div>
 	<div align="center">
-		<h2>Danh sách Thanh viên</h2>
+		<h2>Danh sách Thành viên</h2>
 		<br>
 		<form method="get" th:action="@{/quan-ly-thanh-vien/tim}">
 			<input type="text" placeholder="Tìm kiếm..." name="keyword">
