--- a/Kitucxa-frontend/src/main/resources/templates/trangchuadmin.html
+++ b/Kitucxa-frontend/src/main/resources/templates/trangchuadmin.html
@@ -60,6 +60,8 @@ button:hover span:after {
             <a th:href="@{/quan-ly-thanh-vien}"><button><span>Quản lý Sinh viên</span></button></a>
             <a th:href="@{/quan-ly-phong}"><button><span>Quản lý Phòng</span></button></a>
             <a th:href="@{/quan-ly-dich-vu}"><button><span>Quản lý Dịch vụ</span></button></a>
+            <a th:href="@{/quan-ly-xe}"><button><span>Quản lý xe</span></button></a>
+            <a th:href="@{/quan-ly-ve-thang}"><button><span>Quản lý vé tháng của xe gửi</span></button></a>
         </div>
 </body>
 </html>
