--- a/Kitucxa-frontend/src/main/resources/templates/quanlyVeThang.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlyVeThang.html
@@ -10,6 +10,7 @@
 		<h1>Quản lý vé tháng</h1>
 		<h2>
 			<a th:href="@{/quan-ly-ve-thang/them}" class="btn btn-warning">Thêm vé tháng</a>
+			<a th:href="@{/}" class="btn btn-warning">Trang chủ</a>
 		</h2>
 		<hr>
 	</div>
