update xem ds khach theo ngay

--- a/Kitucxa-frontend/src/main/resources/templates/QLKhachdenchoi.html
+++ b/Kitucxa-frontend/src/main/resources/templates/QLKhachdenchoi.html
@@ -10,6 +10,7 @@
 <body>
    <div align="center">
       <h1>Quản lý khách đến chơi</h1>
+      <div><i><u> <a href="/quanlykhach/dskhachdenchoi">xem thống kê khách đến chơi</a> </u></i></div>
       <div>Tìm kiếm sinh viên: </div>
       <Form method="GET" name="search" th:action="@{/quanlykhach/timkiem}">
          <input name="txtSearch" type="text" style="width: 200">
