Cap nhat them chuc nang nang cao dich vu

--- a/Kitucxa-frontend/src/main/resources/templates/quanlyDichvu.html
+++ b/Kitucxa-frontend/src/main/resources/templates/quanlyDichvu.html
@@ -34,8 +34,8 @@
 				<td th:utext="${dv.id}"></td>
 				<td th:utext="${dv.ten}"></td>
 				<td th:utext="${dv.dongia}"></td>
-				<td><a th:href="@{'/quan-ly-dich-vu/sua/' + ${dv.id}}" class="btn btn-success">Sá»­a</a>&nbsp;&nbsp;&nbsp;&nbsp; 
-				    <a th:href="@{'/quan-ly-dich-vu/xoa/' + ${dv.id}}" class="btn btn-danger">XÃ³a</a></td>
+				<td><a th:href="@{'/quan-ly-dich-vu/sua/' + ${dv.id}}" class="btn btn-success">Sửa</a>&nbsp;&nbsp;&nbsp;&nbsp; 
+				    <a th:href="@{'/quan-ly-dich-vu/xoa/' + ${dv.id}}" class="btn btn-danger">Xóa</a></td>
 			</tr>
 		</table>
 	</div>
