--- a/Kitucxa-frontend/src/main/resources/templates/sinhvienForm.html
+++ b/Kitucxa-frontend/src/main/resources/templates/sinhvienForm.html
@@ -22,6 +22,14 @@
 					<td><input type="text" th:field="*{ten}" /></td>
 				</tr>
 				<tr class="text-left">
+					<td>Username</td>
+					<td><input type="text" th:field="*{userName}" /></td>
+				</tr>
+				<tr class="text-left">
+					<td>Password</td>
+					<td><input type="text" th:field="*{password}" /></td>
+				</tr>
+				<tr class="text-left">
 					<td>Lớp</td>
 					<td><input type="text" th:field="*{lop}" /></td>
 				</tr>
@@ -49,6 +57,14 @@
 				<tr class="text-left">
 					<td>Tên</td>
 					<td><input type="text" th:field="*{ten}" /></td>
+				</tr>
+				<tr class="text-left">
+					<td>Username</td>
+					<td><input type="text" th:field="*{userName}" /></td>
+				</tr>
+				<tr class="text-left">
+					<td>Password</td>
+					<td><input type="text" th:field="*{password}" /></td>
 				</tr>
 				<tr class="text-left">
 					<td>Lớp</td>
