--- a/Kitucxa-frontend/src/main/resources/templates/dangkyDichvu.html
+++ b/Kitucxa-frontend/src/main/resources/templates/dangkyDichvu.html
@@ -10,7 +10,7 @@
 	<div align="center">
 		<h1>Đăng kí Dịch vụ</h1>
 		<h2>
-			<a href="#" class="btn btn-warning">Thoát</a>
+			<a th:href="@{/}" class="btn btn-warning">Trang chủ</a>
 		</h2>
 		<hr>
 	</div>
@@ -23,14 +23,12 @@
 						<th>ID</th>
 						<th>Tên</th>
 						<th>Đơn giá</th>
-						<th>Thời gian sử dụng dịch vụ</th>
 						<th>Tích chọn</th>
 					</tr>
 					<tr th:each="dv : ${listDv}" class="text-center">
 						<td th:utext="${dv.id}"></td>
 						<td th:utext="${dv.ten}"></td>
 						<td th:utext="${dv.dongia}"></td>
-						<td th:utext="${dv.thoigiansddv}"></td>
 						<td><input type="radio" name="dv_id" th:value="${dv.id}" /></td>
 					</tr>
 				</table>
@@ -38,8 +36,7 @@
 			<br>
 			<div>
 				<h3>Nhập vào thời gian sử dụng:</h3>
-				<input type="date" th:field="*{thoigianbd}" placeholder="Thời gian bắt đầu" />
-				<input type="date" th:field="*{thoigiankt}" placeholder="Thời gian kết thúc" />
+				<input type="date" th:field="*{thoigiankt}" />
 			</div>
 			<br> <input type="submit" value="Đăng kí"
 				class="btn btn-success" />
