--- a/Kitucxa-frontend/src/main/resources/templates/dichvuSudungForSinhvien.html
+++ b/Kitucxa-frontend/src/main/resources/templates/dichvuSudungForSinhvien.html
@@ -9,53 +9,53 @@
 <body>
 	<div align="center">
 		<h1>Quản lý Dịch vụ sử dụng</h1>
-		<h2><a href="#" class="btn btn-warning">Thoát</a></h2>
+		<h2>
+			<a th:href="@{/quan-ly-dich-vu-su-dung}" class="btn btn-warning">Quay Lại</a>
+		</h2>
 		<hr>
 	</div>
 	<div align="center">
-	<h2>Thông tin sinh viên</h2>
-	<br>
+		<h2>Thông tin sinh viên</h2>
+		<br>
 		<table cellpadding="10">
-				<tr class="text-left">
-					<td>Tên</td>
-					<td th:text="': ' + ${sv.ten}"></td>
-				</tr>
-				<tr class="text-left">
-					<td>Lớp</td>
-					<td th:text="': ' + ${sv.lop}"></td>
-				</tr>
-				<tr class="text-left">
-					<td>Số CMT</td>
-					<td th:text="': ' + ${sv.soCMT}"></td>
-				</tr>
-				<tr class="text-left">
-					<td>Ngày sinh</td>
-					<td th:text="': ' + ${sv.ngaysinh}">></td>
-				</tr>
-				<tr class="text-left">
-					<td>Quê quán</td>
-					<td th:text="': ' + ${sv.quequan}"></td>
-				</tr>
-			</table>
+			<tr class="text-left">
+				<td>Tên</td>
+				<td th:text="': ' + ${sv.ten}"></td>
+			</tr>
+			<tr class="text-left">
+				<td>Lớp</td>
+				<td th:text="': ' + ${sv.lop}"></td>
+			</tr>
+			<tr class="text-left">
+				<td>Số CMT</td>
+				<td th:text="': ' + ${sv.soCMT}"></td>
+			</tr>
+			<tr class="text-left">
+				<td>Ngày sinh</td>
+				<td th:text="': ' + ${sv.ngaysinh}">></td>
+			</tr>
+			<tr class="text-left">
+				<td>Quê quán</td>
+				<td th:text="': ' + ${sv.quequan}"></td>
+			</tr>
+		</table>
 	</div>
 	<hr>
 	<div align="center">
 		<h2>Danh sách dịch vụ sử dụng</h2>
+		<h4>Thời gian từ <span th:text="${sDate}" ></span> đến <span th:text="${eDate}" ></span></h4>
 		<br>
 		<table border="1" cellpadding="5">
 			<tr class="text-center">
 				<th>Tên dịch vụ</th>
-				<th>Đơn giá</th>
-				<th>Thời gian bắt đầu</th>
-				<th>Thời gian kết thúc</th>
+				<th>Tổng giá</th>
 			</tr>
-			<tr th:each="dvsd : ${listDvsd}" class="text-left">
-				<td th:text="${dvsd.dichvu.ten}"></td>
-				<td th:text="${dvsd.dongia}"></td>
-				<td th:text="${dvsd.thoigianbd}"></td>
-				<td th:text="${dvsd.thoigiankt}"></td>
+			<tr class="text-left" th:each="model : ${listModel}">
+					<td th:utext="${model.ten}"></td>
+					<td th:utext="${model.income}"></td>
 			</tr>
 		</table>
+		<br>
 	</div>
 </body>
 </html>
