--- a/Kitucxa-frontend/src/main/resources/templates/SuaKhach.html
+++ b/Kitucxa-frontend/src/main/resources/templates/SuaKhach.html
@@ -13,7 +13,7 @@
 		<div>Sửa khách đến chơi:</div>
 		<div class=”col-sm-6″>
 			<form name="suaKhach" method="post" th:object="${khach}" th:action="@{/quanlykhach/suakhach}">
-				<table border="1px">
+				<table border="1px" ellpadding="5">
 					<tr>
 						<td>Số CMT</td>
 						<td><input type="text" th:Field="*{soCMT}"></td>
