--- a/Kitucxa-frontend/src/main/resources/templates/trangchuadmin.html
+++ b/Kitucxa-frontend/src/main/resources/templates/trangchuadmin.html
@@ -16,6 +16,7 @@ button {
 	text-align: center;
 	font-size: 28px;
 	padding: 20px;
+	height: 166px;
 	width: 200px;
 	transition: all 0.5s;
 	cursor: pointer;
@@ -58,6 +59,7 @@ button:hover span:after {
             <hr>
             <br>
             <a th:href="@{/quan-ly-sinh-vien}"><button><span>Quản lý Sinh viên</span></button></a>
+            <a th:href="@{/quanlykhach}"><button><span>Quản lý Khách đến chơi</span></button></a>
             <a th:href="@{/quan-ly-phong}"><button><span>Quản lý Phòng</span></button></a>
             <a th:href="@{/quan-ly-dich-vu}"><button><span>Quản lý Dịch vụ</span></button></a>
             <a th:href="@{/quan-ly-dich-vu-su-dung}"><button><span>Quản lý Dịch vụ sử dụng</span></button></a>
