--- a/Kitucxa-frontend/src/main/resources/templates/QLKhachdenchoi.html
+++ b/Kitucxa-frontend/src/main/resources/templates/QLKhachdenchoi.html
@@ -3,21 +3,23 @@
 
 <head>
    <meta charset="UTF-8" />
-   <title>Quản lý khách đên chơi</title>
+   <title>Quản lý khách đến chơi</title>
    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 </head>
 
 <body>
    <div align="center">
       <h1>Quản lý khách đến chơi</h1>
+      <h2><a th:href="@{/}" class="btn btn-warning">Trang chủ</a></h2>
       <div><i><u> <a href="/quanlykhach/dskhachdenchoi">xem thống kê khách đến chơi</a> </u></i></div>
       <div>Tìm kiếm sinh viên: </div>
       <Form method="GET" name="search" th:action="@{/quanlykhach/timkiem}">
          <input name="txtSearch" type="text" style="width: 200">
-         <input name="subSearch" type="submit" value="Tìm kiếm">
+         <input name="subSearch" type="submit" class="btn btn-success" value="Tìm kiếm">
       </Form>
+      <div class=”col-sm-6″>
       <form method="get" th:action="@{/quanlykhach/dskhach}">
-         <table border="1px">
+         <table border="1px" cellpadding="5">
             <tr>
                <th>Mã sv</th>
                <th>Họ tên</th>
@@ -37,6 +39,7 @@
          </table>
          <input type="submit" value="Tiếp tục">
       </form>
+      </div>
    </div>
 </body>
 
