--- a/Kitucxa-frontend/src/main/resources/templates/SuaKhach.html
+++ b/Kitucxa-frontend/src/main/resources/templates/SuaKhach.html
@@ -27,6 +27,10 @@
 						<td><input type="date" name="ngaysinh" th:Field="*{ngaysinh}"></td>
 					</tr>
 
+					<tr>
+						<td>Ngày đến</td>
+						<td><input type="date" name="ngayden" th:Field="*{ngayden}"></td>
+					</tr>
 				</table>
 				<input style="margin-left: 200px;" type="submit" value="Lưu" name="luu">
 			</form>
